# BIRD-BOT

./: .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml
birdbot/: pyproject.toml
birdbot/src/birdbot/: __init__.py  bootstrap.py
birdbot/src/birdbot/agent/: __init__.py  facade.py
birdbot/src/birdbot/chat/: __init__.py  handler.py  registry.py  tools.py
birdbot/src/birdbot/context/: __init__.py  adapters.py  models.py  rerank.py  sensitive.py  service.py  sources.py
birdbot/src/birdbot/db/: __init__.py  migrations.py  pool.py
birdbot/src/birdbot/db/migrations/: 0001_init.sql  0002_rls.sql  0003_events_job.sql  0004_workflow.sql
birdbot/src/birdbot/deep/: __init__.py  llm.py  story.py  workflow.py
birdbot/src/birdbot/digest/: __init__.py  aggregate.py  service.py
birdbot/src/birdbot/eval/: __init__.py  checks.py  runner.py  scenarios.py
birdbot/src/birdbot/ingress/: __init__.py  app.py  schema.py  store.py
birdbot/src/birdbot/observability/: __init__.py  alerts.py  hook.py  quota.py  redis_quota.py  sinks.py  telemetry.py
birdbot/src/birdbot/pipeline/: __init__.py  convert.py  orchestrate.py
birdbot/src/birdbot/privacy/: __init__.py  dsar.py  location.py  redaction.py  retention.py
birdbot/src/birdbot/recognition/: __init__.py  adapter.py  calibrator.py  fast_stage.py  frame_scorer.py  types.py
birdbot/src/birdbot/router/: __init__.py  region.py  registry.py  router.py  validate.py
birdbot/src/birdbot/runtime/: __init__.py  agent.py  completion.py  cron.py  gateway.py  registry.py  tool.py
birdbot/src/birdbot/tenant/: __init__.py  context.py
birdbot/src/birdbot/testing/: __init__.py  record_replay.py
birdbot/src/birdbot/tools/: __init__.py  echo.py
birdbot/src/birdbot/workflow/: __init__.py  clock.py  deliver.py  outbox.py  runtime.py  worker.py
birdbot/tests/: conftest.py  test_agent_runtime_spike.py  test_bird_context_service.py  test_birdevent_schema.py  test_bootstrap.py  test_calibrator.py  test_chat_api.py  test_concurrency.py  test_context_http_source.py  test_context_models.py  test_context_rerank.py  test_context_sources.py  test_cron.py  test_daily_digest.py  test_deep_stage.py  test_dsar.py  test_echo_tool.py  test_entry_point_smoke.py  test_eval.py  test_event_store.py  test_facade.py  test_fast_stage.py  test_frame_scorer.py  test_gateway.py  test_ingress_api.py  test_location_precision.py  test_model_registry.py  test_model_router.py  test_nature_chat_spike.py  test_observability_hook.py  test_observability_sinks.py  test_outbox.py  test_outbox_delivery.py  test_pipeline_convert.py  test_pipeline_e2e.py  test_quota.py  test_recognition_adapter.py  test_record_replay.py  test_redaction.py  test_redis_quota.py  (+9 more)
demo/: README.md  __init__.py  bus.py  engine.py  fakes.py  scenarios.py  server.py
demo/static/: app.html  console.html  device.html  index.html  shared.css  shared.js
docs/: 2026-06-22-birdbot-idea.md  2026-06-22-birdbot-solution.md  2026-06-23-feature-inventory.md  architecture.md
docs/adr/: 0001-vendored-nanobot-fork.md  0002-workflow-on-postgres.md  0003-ingress-pattern.md  0004-tenant-isolation-pool-bridge.md  0005-ebird-compliance-source-mode.md  0006-observability-first-class.md  0007-eu-data-routing.md  0008-recognition-backend.md  0009-persistence-asyncpg-raw-sql.md  0010-http-ingress-fastapi.md  0011-agent-boundary-provider-backend.md  0012-model-router-backend-litellm.md  0013-self-hosted-runtime-litellm.md  0014-llm-gateway-governed-call.md  0015-geo-temporal-rerank-in-deep-stage.md
nanobot/agent/: runner.py  subagent.py
nanobot/agent/tools/: mcp.py  spawn.py  web.py
nanobot/apps/cli/: service.py
nanobot/cli/: commands.py  onboard.py
nanobot/command/: builtin.py
nanobot/config/: schema.py
nanobot/providers/: __init__.py  factory.py  image_generation.py  openai_compat_provider.py
nanobot/providers/openai_responses/: parsing.py
nanobot/utils/: __init__.py
scripts/: smoke_agent_runtime.py  smoke_deep_stage_e2e.py  smoke_deep_stage_vision.py  smoke_nature_chat.py
tests/: test_msteams.py  test_nanobot_facade.py
tests/agent/: test_auto_compact.py  test_consolidator.py  test_dream.py  test_dream_session.py  test_hook_composite.py  test_loop_save_turn.py  test_mcp_connection.py  test_onboard_logic.py  test_runner_injections.py  test_runtime_refresh.py  test_session_manager_history.py
tests/agent/tools/: test_subagent_tools.py
tests/cli/: test_commands.py
tests/cli_apps/: test_service.py
tests/command/: test_model_command.py  test_router_dispatchable.py
tests/config/: test_config_migration.py
tests/providers/: test_image_generation.py  test_openai_responses.py  test_provider_retry_after_hints.py  test_provider_sdk_retry_defaults.py  test_providers_init.py
tests/tools/: test_web_fetch_security.py
tests/utils/: test_media_decode.py
