[project]
name = "nanobot-ai"
version = "0.2.1"
description = "A lightweight personal AI assistant framework"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Xubin Ren"},
    {name = "the nanobot contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license-files = [
    "LICENSE",
    "THIRD_PARTY_NOTICES.md",
]

# meta-nanobot core: a light install for a runnable single-/dual-provider agent.
# Heavy tool SDKs live in extras below; ToolLoader.discover() degrades gracefully
# when an extra is absent (the tool is skipped, import never crashes).
dependencies = [
    "typer>=0.20.0,<1.0.0",
    "anthropic>=0.45.0,<1.0.0",
    "openai>=2.8.0",            # OpenAI-compatible provider (DeepSeek/Doubao/Qwen/Gemini/local)
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "questionary>=2.0.0,<3.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "dulwich>=0.22.0,<1.0.0",   # pure-python git for the workspace git store
    "pyyaml>=6.0,<7.0.0",
    "filelock>=3.25.2",
    "croniter>=6.0.0,<7.0.0",   # cron tool + Dream consolidation scheduling
]

[project.optional-dependencies]
# Tool extras — install only the agent capabilities you want.
web = [                          # web_search / web_fetch tools
    "ddgs>=9.5.5,<10.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
]
mcp = [                          # Model Context Protocol tool
    "mcp>=1.26.0,<2.0.0",
]
docs = [                         # document text extraction (pdf/docx/xlsx/pptx)
    "pypdf>=5.0.0,<6.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-pptx>=1.0.0,<2.0.0",
]
image = [                        # Codex-backed image generation path
    "oauth-cli-kit>=0.1.3,<1.0.0",
]
all = [
    "ddgs>=9.5.5,<10.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "mcp>=1.26.0,<2.0.0",
    "pypdf>=5.0.0,<6.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-pptx>=1.0.0,<2.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.1.0",
    # tool deps required to run the full kept test suite
    "ddgs>=9.5.5,<10.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "mcp>=1.26.0,<2.0.0",
    "pypdf>=5.0.0,<6.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-pptx>=1.0.0,<2.0.0",
]

[project.scripts]
nanobot = "nanobot.cli.commands:app"

# Third-party tool plugins register here.  Built-in tools are discovered
# automatically via pkgutil scanning in ToolLoader.discover().
# [project.entry-points."nanobot.tools"]
# my_plugin = "my_package.plugins:MyTool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "nanobot/**/*.py",
    "nanobot/templates/**/*.md",
    "nanobot/skills/**/*.md",
    "nanobot/skills/**/*.sh",
]

[tool.hatch.build.targets.wheel]
packages = ["nanobot"]

[tool.hatch.build.targets.wheel.sources]
"nanobot" = "nanobot"

[tool.hatch.build.targets.sdist]
include = [
    "nanobot/",
    "README.md",
    "LICENSE",
    "THIRD_PARTY_NOTICES.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["nanobot"]
omit = ["tests/*", "**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
