[project]
name = "birdbot"
version = "0.0.1"
description = "BirdBot — cloud AI observation layer for smart bird feeders (application layer atop the vendored nanobot kernel)"
requires-python = ">=3.11"
license = { text = "MIT" }
# Depends on the vendored kernel (editable-installed as `nanobot-ai`). In this
# monorepo the kernel is always co-installed, so install with `--no-deps`
# (see CONTRIBUTING note in the issue) — this avoids resolving `nanobot-ai`
# from a package index where it does not exist.
dependencies = [
    "nanobot-ai",
    "asyncpg>=0.30,<1.0",   # async-native Postgres driver (ADR-0009)
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
]

# Domain tools register into the kernel via this entry-point group; the kernel's
# ToolLoader._discover_plugins() scans `group="nanobot.tools"` at runtime.
[project.entry-points."nanobot.tools"]
birdbot_echo = "birdbot.tools.echo:EchoTool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/birdbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
