[project]
name = "birdbot"
version = "0.0.1"
description = "BirdBot — cloud AI observation layer for smart bird feeders (self-hosted runtime, ADR-0013)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "asyncpg>=0.30,<1.0",   # async-native Postgres driver (ADR-0009)
    "fastapi>=0.115,<1.0",  # HTTP ingress (ADR-0010); starlette/pydantic already present
    "openai>=2.8.0",        # OpenAICompatStoryLLM (S12): vision + structured output
    "httpx>=0.28.0,<1.0.0",         # HTTP context-source adapters (S7/S20)
    "json-repair>=0.57.0,<1.0.0",   # tolerant JSON parse of LLM output (S12)
    "redis>=5.0,<6.0",              # Redis-backed quota limiter (S16, ADR-0004)
    "litellm>=1.50,<2.0",           # LLM provider gateway (ADR-0013); AgentRuntime + Model Router backend
    "jsonschema>=4.20,<5.0",        # structured-output validation (ADR-0013); replaces kernel Schema
    "croniter>=2.0,<7.0",           # self-hosted Cron trigger (ADR-0013/M5); replaces kernel CronService
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "fakeredis>=2.20,<3.0",         # in-memory Redis for quota tests (S16)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/birdbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
